# tx

./: .gitignore  .gitmodules  LICENSE  README.md  debug_utils.py  example.py  install.txt  pyproject.toml  requirements.txt  todolist
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst
examples/: 1-transformer-from-scratch.ipynb  attention.ipynb  completion.ipynb  hf_attention.ipynb  params.py  tfs copy.py  tfs.py  tfs_attention.py  transformerlens-demo.ipynb
test/: Dockerfile  test_attention.py  test_debug_utils.py  test_gpt2.py  test_hooks.py  test_modules.py  test_tokens.py
test/e2e/: param_conversion.py  test_compare_attention.py  test_compare_gpt2.py  test_decode_mode.py  test_deocde_mode.py
test/integration/: test_attention.py  test_cache.py  test_examples.py  test_gpt2.py  test_gpt2_params.py  test_hooks.py
test/unit/: test_attention.py  test_generative_model.py  test_gpt2_params.py  test_hook_points.py  test_module_contract.py  test_module_initialisation.py  test_token_ops.py
test/unit/models/: test_gpt2lm.py
tx/: __init__.py  hooks.py  intermediates.py  network.py  params.py  tokens.py  tree_util.py  tree_utils.py
tx/api/: TransformerWithHooks.py  __init__.py
tx/hooks/: __init__.py  common.py  compose.py  intermediates.py
tx/models/: __init__.py  base.py  gpt2.py  index.py
tx/models/gpt2/: __init__.py  gpt2.py  loader.py  module.py  modules.py
tx/modules/: __init__.py  attention.py  cache.py  caching.py  common.py  hooks.py  intermediate.py  transformer.py
