[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "txml"
version = "0.1.0"
authors = [{ name = "Alex Jackson", email = "mail@alexjackson.uk" }]
description = "A Flax-based library for examining transformer models."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexjackson1/tx"
"Bug Tracker" = "https://github.com/alexjackson1/tx/issues"
